welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (n <- 0 to nums.length-1)
               ^